# extra-syntax-highlighting-eclipse-plugin

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  artifacts.xml.xz  build.target  content.xml.xz  index.html  p2.index  pom.xml
.github/: dependabot.yml
.github/workflows/: build.yml  stale.yml  update-syntaxes.yml
feature/: feature.properties  feature.xml  pom.xml
plugin/: .gitattributes  .gitignore  about.ini  build.properties  plugin.xml  pom.xml  syntaxes.meta.yaml  syntaxes.sources.yaml  update-syntaxes.py  verify-syntax-registrations.py
plugin/syntaxes/amber/: LICENSE.txt  amber.example.ab  amber.language-configuration.json  amber.tmLanguage.json
plugin/syntaxes/antlr4/: antlr.example.g4
plugin/syntaxes/apache-http/: apacheconf.example.conf
plugin/syntaxes/astro/: astro.langcfg.json
plugin/syntaxes/ballerina/: ballerina.example.bal
plugin/syntaxes/bazel/: starlark.example.bzl
plugin/syntaxes/bf/: LICENSE.txt  bf.example.bf  bf.language-configuration.json  bf.tmLanguage.json
plugin/syntaxes/carbon/: carbon.example.carbon  carbon.tmLanguage.json  carbon.tmLanguage.plist
plugin/syntaxes/cobol/: cobol.example.cob  cobol.tmLanguage.json  endevor-print-cobol.tmLanguage.json  meta.embedded.block.cics.tmLanguage.json  (+1 more)
plugin/syntaxes/ocaml/: ocaml.example.ml  ocaml.interface.example.mli  ocaml.ocamlformat.example.ocamlformat  ocaml.opam.example.opam  reason.example.re
plugin/themes/: SebThom.css
plugin/updater/: pom.xml  run.cmd  run.sh  updater-config.yaml  updater-state.yaml
updatesite/: category.xml  pom.xml
(+104 files in other folders)
